tree-sitter-march/grammar.js
    source_file: $ => repeat1($._declaration),

    module_def: $ => seq(
      'mod', field('name', $.module_path),
      'do', repeat($._declaration), 'end',
    ),

    _declaration: $ => choice(
      $.attribute,
      $.module_def,
      $.derive_declaration,
      $.satisfy_declaration,
      $.resource_declaration,
      $.transitions_def,
      $.app_def,
      $.doc_annotation,
      $.function_def,
      $.let_declaration,
      $.type_def,
      $.actor_def,
      $.interface_def,
      $.impl_def,
      $.sig_def,
      $.extern_def,
      $.protocol_def,
      $.use_declaration,
      $.import_declaration,
      $.alias_declaration,
      $.needs_declaration,
      $.capability_declaration,
      $.test_decl,
      $.describe_decl,
      $.setup_decl,
      $.setup_all_decl,
    ),

    // @[name], @[name(arg)], @name(arg), @invariant(expr)
    function_def: $ => seq(
      // `pfn` is the private form; it never combines with `pub`.
      choice(seq(optional('pub'), 'fn'), 'pfn'),
      field('name', choice($.identifier, alias('send', $.identifier))),
      optional(seq('[', commaSep1(seq($.identifier, ':', $._type)), ']')),
      '(', optional(commaSep($.fn_param)), ')',
      optional(seq(':', field('return_type', $._type))),
      optional($.when_guard),
      'do', field('body', $.block_body), 'end',
    ),

    fn_param: $ => choice(
      $.named_param,
      $._pattern,
    ),

    named_param: $ => choice(
      seq(
        optional(choice('linear', 'affine')),
        field('name', $.identifier),
        ':', field('type', $._type),
        optional(seq('\\\\', field('default', $._expr))),
      ),
      seq(field('name', $.identifier), '\\\\', field('default', $._expr)),
    ),

    when_guard: $ => seq('when', $._expr),

    block_body: $ => seq(
      $._block_expr,
      repeat($._block_expr),
    ),

    _block_expr: $ => choice(
      $.let_declaration,
      $.local_function,
      $._expr,
    ),

    let_declaration: $ => seq(
      optional(choice('linear', 'affine')),
      'let', optional(choice('?', '*')), field('pattern', $._pattern), optional($.type_annotation), '=', field('value', $._expr),
    ),

    // Full pattern rules
    _pattern: $ => choice(
      $.as_pattern,
      $.or_pattern,
      $._pattern_alt,
    ),

    variable_pattern: $ => alias($.identifier, $.variable_pattern),

    literal_pattern: $ => choice(
      $.integer,
      $.float,
      $.string,
      $.boolean,
      seq('-', $.integer),
      seq('-', $.float),
    ),

    type_annotation: $ => seq(':', $._type),

    // Full type rules
    _type: $ => choice(
      $.arrow_type,
      $._type_atom,
    ),

    arrow_type: $ => prec.right(1, seq(
      field('param', $._type_atom), '->', field('return', $._type),
    )),

    _type_atom: $ => choice(
      $.unit_type,
      $.parenthesized_type,
      $.record_type,
      $.type_nat,
      $.type_application,
      $.qualified_type,
      $.type_constructor,
      $.type_variable,
      $.linear_type,
      $.tuple_type,
      $.refinement_type,
    ),

    // { Int | _ > 0 }, { List(a) | len(_) > 0 }, { v : Int | v != 0 }
    record_type: $ => seq('{', commaSep1($.record_type_field), '}'),
    type_constructor: $ => alias($.type_identifier, $.type_constructor),
    type_variable: $ => alias($.identifier, $.type_variable),

    type_def: $ => choice(
      seq('tag', field('name', $.type_identifier)),
      $._type_def,
    ),
    _type_def: $ => seq(
      optional('always_linear'),
      choice(seq(optional('opaque'), 'type'), 'ptype'),
      field('name', $.type_identifier),
      optional($.type_params),
      '=',
      choice(
        seq($.variant, repeat(seq('|', $.variant))),  // variant/sum type
        $._type,                                        // alias
      ),
    ),

    type_params: $ => seq('(', commaSep1($.type_variable), ')'),

    variant: $ => seq(
      field('name', choice($.type_identifier, $.atom_literal)),
      optional(seq('(', commaSep1($._type), ')')),
    ),

    record_type_field: $ => seq(
      optional(choice('linear', 'affine')),
      field('name', $.identifier), ':', field('type', $._type),
    ),

    // Full actor, interface, impl, sig, extern, protocol implementations
    actor_def: $ => seq(
      'actor', field('name', $.type_identifier), 'do',
      $.actor_state,
      $.actor_init,
      optional($.mailbox_clause),
      optional($.supervise_block),
      repeat(choice($.actor_handler, $.on_stop_block)),
      'end',
    ),
    actor_state: $ => seq('state', '{', commaSep($.record_type_field), '}'),
    actor_init: $ => choice(
      seq('init', '(', commaSep($.init_param), ')', $._expr),
      seq('init', $._expr),
    ),
    actor_handler: $ => seq(
      'on', field('name', $.type_identifier),
      '(', optional(commaSep($.fn_param)), ')',
      'do', $.block_body, 'end',
    ),

    interface_def: $ => seq(
      'interface',
      field('name', $.type_identifier),
      '(', field('param', $.type_variable), ')',
      optional(seq(choice(':', 'requires'), commaSep1($.superclass_constraint))),
      'do',
      repeat(choice($.method_sig, $.function_def)),
      'end',
    ),
    method_sig: $ => seq(
      'fn', field('name', $.identifier), ':', field('type', $._type),
      optional(seq('do', field('default', $._expr), 'end')),
    ),

    impl_def: $ => seq(
      'impl',
      field('interface', $.module_path),
      '(',
      field('type', $._type),
      ')',
      optional(seq('for', field('for_type', $._type))),
      optional(seq('when', commaSep1($.superclass_constraint))),
      'do',
      repeat($.function_def),
      'end',
    ),

    module_path: $ => seq($.type_identifier, repeat(seq('.', $.type_identifier))),

    // Test declarations
    _expr: $ => choice(
      $.assert_expression,
      $.pipe_expression,
      $.or_expression,
      $.and_expression,
      $.comparison_expression,
      $.additive_expression,
      $.multiplicative_expression,
      $.unary_expression,
      $.call_expression,
      $.constructor_expression,
      $.bare_constructor,
      $.field_expression,
      $.lambda_expression,
      $.if_expression,
      $.match_expression,
      $.cond_expression,
      $.block_expression,
      $.record_expression,
      $.record_update,
      $.tuple_expression,
      $.parenthesized_expression,
      $.unit_expression,
      $.list_expression,
      $.list_comprehension,
      $.send_expression,
      $.spawn_expression,
      $.sigil_expression,
      $.atom,
      $.typed_hole,
      $.refinement_placeholder,
      $.integer,
      $.float,
      $.string,
      $.boolean,
      $.identifier,
    ),

    pipe_expression: $ => prec.left(1, seq(
      field('left', $._expr), '|>', field('right', $._expr),
    )),
    comparison_expression: $ => prec.left(4, seq(
      field('left', $._expr),
      field('operator', choice('==', '!=', '<', '>', '<=', '>=')),
      field('right', $._expr),
    )),
    additive_expression: $ => prec.left(5, seq(
      field('left', $._expr),
      field('operator', choice('+', '-', '++', '+.', '-.')),
      field('right', $._expr),
    )),
    multiplicative_expression: $ => prec.left(6, seq(
      field('left', $._expr),
      field('operator', choice('*', '/', '%', '*.', '/.')),
      field('right', $._expr),
    )),
    call_expression: $ => prec(8, seq(
      field('function', $._expr),
      '(', optional(commaSep($._call_arg)), ')',
    )),
    constructor_expression: $ => prec(8, seq(
      field('name', $.type_identifier),
      '(', optional(commaSep($._call_arg)), ')',
    )),
    // Bare constructor (nullary) used as expression, e.g. Nil, None, True
    bare_constructor: $ => field('name', $.type_identifier),
    field_expression: $ => prec.left(9, seq(
      // The field may be a type_identifier so that a qualified path such as
      // `Mgrep.Search.Matcher.contains_case` parses as nested field accesses.
      field('object', $._expr), '.',
      field('field', choice($.identifier, $.type_identifier)),
    )),

    // `fn params -> body`.  In general the body is `let`s then one
    // expression (the compiler's lambda_body); as a call argument it may be
    // any statement sequence, since `,` or `)` bounds it (call_arg).
    lambda_expression: $ => seq(
      'fn', optional($._lambda_params), '->',
      field('body', alias($.lambda_body, $.block_body)),
    ),
    _lambda_params: $ => choice(
      field('param', choice($.identifier, '_')),
      seq('(', optional(commaSep($.fn_param)), ')'),
    ),
    _call_arg: $ => choice(
      $._expr,
      alias($.call_arg_lambda, $.lambda_expression),
    ),
    if_expression: $ => seq(
      'if', field('condition', $._expr),
      'do', field('then', $.block_body),
      'else', field('else', $.block_body),
      'end',
    ),
    _lparen: $ => choice('(', $._stmt_lparen),
    unit_expression: $ => seq($._lparen, ')'),
    tuple_expression: $ => seq(
      $._lparen, $._expr, ',', commaSep1($._expr), ')',
    ),
    record_expression: $ => seq(
      '{', commaSep1($.record_field), '}',
    ),
    record_update: $ => seq(
      '{', field('base', $._expr), 'with', commaSep1($.record_field), '}',
    ),
    record_field: $ => seq(field('name', $.identifier), ':', field('value', $._expr)),

    boolean: _ => choice('true', 'false'),

    // Wrapped in token() so the entire string is lexed as one atomic unit.
    // Without this, the tree-sitter lexer tries to match comment tokens (which
    // start with '--') inside string content.  After '--' the lexer enters a
    // comment-scanning state; when it then sees the closing '"' it advances to
    // the comment-accept state and swallows the quote, breaking the string.
    // Making the rule atomic prevents any extra-token (comment/whitespace)
    // matching from occurring mid-string.
    string: _ => token(seq(
      '"',
      repeat(choice(
        /[^"\\]+/,
        seq('\\', /[^x]|x[0-9a-fA-F]{2}/),
      )),
      '"',
    )),

    comment: _ => token(seq('--', /.*/)),
    integer: _ => /[0-9]+/,
    identifier: _ => /[a-z_][a-zA-Z0-9_']*/,
    type_identifier: _ => /[A-Z][a-zA-Z0-9_']*/,
  },
});

// Helpers — defined outside grammar({}) so they are plain JS functions.
function commaSep(rule) {
  return optional(commaSep1(rule));
}
function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}
