tree-sitter-march/test/corpus/comments.txt
================================================================================
Line comment
================================================================================

mod Foo do
  -- this is a comment
  let x = 1
end

--------------------------------------------------------------------------------

(source_file
  (module_def
    name: (module_path
      (type_identifier))
    (comment)
    (let_declaration
      pattern: (variable_pattern
        (variable_pattern))
      value: (integer))))

================================================================================
Block comment simple
================================================================================

mod Foo do
  {- a block comment -}
  let x = 1
end

--------------------------------------------------------------------------------

(source_file
  (module_def
    name: (module_path
      (type_identifier))
    (block_comment)
    (let_declaration
      pattern: (variable_pattern
        (variable_pattern))
      value: (integer))))

================================================================================
Block comment nested
================================================================================

mod Foo do
  {- outer {- inner -} outer -}
  let x = 1
end

--------------------------------------------------------------------------------

(source_file
  (module_def
    name: (module_path
      (type_identifier))
    (block_comment)
    (let_declaration
      pattern: (variable_pattern
        (variable_pattern))
      value: (integer))))
