tree-sitter-march/test/corpus/expressions.txt
================================================================================
Binary arithmetic
================================================================================
mod Foo do let x = 1 + 2 * 3 end
--------------------------------------------------------------------------------

(source_file
  (module_def
    name: (module_path
      (type_identifier))
    (let_declaration
      pattern: (variable_pattern
        (variable_pattern))
      value: (additive_expression
        left: (integer)
        right: (multiplicative_expression
          left: (integer)
          right: (integer))))))

================================================================================
Pipe operator
================================================================================
mod Foo do let x = a |> f end
--------------------------------------------------------------------------------

(source_file
  (module_def
    name: (module_path
      (type_identifier))
    (let_declaration
      pattern: (variable_pattern
        (variable_pattern))
      value: (pipe_expression
        left: (identifier)
        right: (identifier)))))

================================================================================
Function call
================================================================================
mod Foo do let x = f(1, 2) end
--------------------------------------------------------------------------------

(source_file
  (module_def
    name: (module_path
      (type_identifier))
    (let_declaration
      pattern: (variable_pattern
        (variable_pattern))
      value: (call_expression
        function: (identifier)
        (integer)
        (integer)))))

================================================================================
Constructor with args
================================================================================
mod Foo do let x = Some(42) end
--------------------------------------------------------------------------------

(source_file
  (module_def
    name: (module_path
      (type_identifier))
    (let_declaration
      pattern: (variable_pattern
        (variable_pattern))
      value: (constructor_expression
        name: (type_identifier)
        (integer)))))

================================================================================
Field access
================================================================================
mod Foo do let x = rec.field end
--------------------------------------------------------------------------------

(source_file
  (module_def
    name: (module_path
      (type_identifier))
    (let_declaration
      pattern: (variable_pattern
        (variable_pattern))
      value: (field_expression
        object: (identifier)
        field: (identifier)))))

================================================================================
Lambda single param
================================================================================
mod Foo do let f = fn x -> x end
--------------------------------------------------------------------------------

(source_file
  (module_def
    name: (module_path
      (type_identifier))
    (let_declaration
      pattern: (variable_pattern
        (variable_pattern))
      value: (lambda_expression
        param: (identifier)
        body: (block_body
          (identifier))))))

================================================================================
If do else end
================================================================================
mod Foo do let x = if true do 1 else 2 end end
--------------------------------------------------------------------------------

(source_file
  (module_def
    name: (module_path
      (type_identifier))
    (let_declaration
      pattern: (variable_pattern
        (variable_pattern))
      value: (if_expression
        condition: (boolean)
        then: (block_body
          (integer))
        else: (block_body
          (integer))))))

================================================================================
Tuple expression
================================================================================
mod Foo do let x = (1, 2) end
--------------------------------------------------------------------------------

(source_file
  (module_def
    name: (module_path
      (type_identifier))
    (let_declaration
      pattern: (variable_pattern
        (variable_pattern))
      value: (tuple_expression
        (integer)
        (integer)))))

================================================================================
Record expression
================================================================================
mod Foo do let x = { a: 1, b: 2 } end
--------------------------------------------------------------------------------

(source_file
  (module_def
    name: (module_path
      (type_identifier))
    (let_declaration
      pattern: (variable_pattern
        (variable_pattern))
      value: (record_expression
        (record_field
          name: (identifier)
          value: (integer))
        (record_field
          name: (identifier)
          value: (integer))))))

================================================================================
Record update
================================================================================
mod Foo do let x = { s with count: 1 } end
--------------------------------------------------------------------------------

(source_file
  (module_def
    name: (module_path
      (type_identifier))
    (let_declaration
      pattern: (variable_pattern
        (variable_pattern))
      value: (record_update
        base: (identifier)
        (record_field
          name: (identifier)
          value: (integer))))))

================================================================================
Bare constructor expression (nullary)
================================================================================
mod Foo do let x = Nil end
--------------------------------------------------------------------------------

(source_file
  (module_def
    name: (module_path
      (type_identifier))
    (let_declaration
      pattern: (variable_pattern
        (variable_pattern))
      value: (bare_constructor
        name: (type_identifier)))))

================================================================================
Unit expression
================================================================================
mod Foo do let x = () end
--------------------------------------------------------------------------------

(source_file
  (module_def
    name: (module_path
      (type_identifier))
    (let_declaration
      pattern: (variable_pattern
        (variable_pattern))
      value: (unit_expression))))
